# Quickbase

./: Cargo.toml
lib/: Cargo.toml
lib/src/: lib.rs  migrator.rs  schema.rs  version.rs
qbase_runtime/: Cargo.toml
qbase_runtime/api/: route.rs
qbase_runtime/src/: main.rs
qbasefrontend/: README.md  package-lock.json  package.json
qbasefrontend/src/: main.ts
qbasefrontend/src/assets/: main.css
qbasefrontend/src/router/: index.ts
testimplementation/: Cargo.toml
testimplementation/src/: main.rs  schema.json
