[package]
name = "qbase"
version = "0.1.0"
edition = "2024"

[lib]
name = "libqbase"
[dependencies]
chrono = {version="0.4.40",features=["serde"]}
rusqlite = "0.34.0"
semver = "1.0.26"
serde = {version= "1.0.219", features = ["derive"]}
serde-semver = "0.2.1"
serde_json = "1.0.140"
uuid = {version="1.16.0",features=["v4"]}
